--- a/src/app/features/pages/admin/produtos/create-product/create-product.component.html
+++ b/src/app/features/pages/admin/produtos/create-product/create-product.component.html
@@ -16,5 +16,6 @@
             <app-drop (emiter)="select($event)"></app-drop>
             
         </div>
+        <button (click)="saveProduct()">Criar</button>
     </div>
 </section>
