--- a/src/app/features/pages/admin/homeAdmin/home.component.scss
+++ b/src/app/features/pages/admin/homeAdmin/home.component.scss
@@ -30,7 +30,7 @@
 
     .main {
         flex: 1;
-        background-color: #f2f2f2;
+        background-color: #fff;
 
         .header {
             width: 100%;
@@ -47,7 +47,7 @@
                 height: calc(100vh - 82px);
                 overflow-y: auto;
                 scrollbar-width: thin;
-                scrollbar-color: #505861 #f2f2f2;
+                scrollbar-color: #505861 #fff;
 
                 .area-main {
                     width: 100%;
