--- a/src/app/features/pages/admin/produtos/create-product/create-product.component.html
+++ b/src/app/features/pages/admin/produtos/create-product/create-product.component.html
@@ -4,18 +4,84 @@
             <button class="btn" mat-flat-button (click)="desabiledCar()">
                 <mat-icon>close</mat-icon>
             </button>
-            <h1>Cadastrar Produto</h1>
+            <div>
+                <h1>Cadastrar Produto</h1>
+            </div>
         </div>
         <div class="container-infor-produto">
             <section class="th">
-                abcd
+                <app-image-drop-carrossel (enviarImagens)="select($event)"></app-image-drop-carrossel>
             </section>
             <section class="th">
-                fdsfdf
+                <form [formGroup]="groupform">
+                    <div class="form-step">
+                        <fieldset class="ng-fieldset">
+                            <legend>Nome do Produto</legend>
+                            <input #primeiroInput type="text" class="ng-input" placeholder="Nome do Produto"
+                                formControlName="productName" (keydown.enter)="focarProximoCampo('categoriaId')">
+                        </fieldset>
+                        @if (isRequired('productName')) {
+                        <small class="ng-error">Informe o Nome do Produto</small>
+                        }
+                        <div class="ng-select">
+                            <label for="categoriaId">Categoria do Produto: </label>
+                            <select id="categoriaId" formControlName="categoriaId">
+                                <option value="" disabled selected>Selecione uma categoria</option>
+
+                                @for (categoria of categorias; track $index) {
+                                <option [value]="categoria.id">{{ categoria.nome }}</option>
+                                }
+                            </select>
+                            @if (isRequired('categoriaId')) {
+                            <small class="ng-error">Selecione uma categoria</small>
+                            }
+                        </div>
+
+                        <fieldset class="ng-fieldset">
+                            <legend>Preço</legend>
+                            <input type="number" class="ng-input"
+                                maxlength="15" placeholder="0.00" formControlName="price" (keydown.enter)="focarProximoCampo('peso')" />
+                        </fieldset>
+                        @if (isRequired('price')) {
+                        <small class="ng-error">Informe o Preço do Produto!</small>
+                        }
+                        @if (groupform.get('price')?.errors?.['precoInvalido']) {
+                        <small class="ng-error">{{ groupform.get('price')?.errors?.['precoInvalido'] }}</small>
+                        }
+
+                        <fieldset class="ng-fieldset">
+                            <legend>Peso (kg)</legend>
+                            <input  type="number" class="ng-input" placeholder="0.00"
+                                formControlName="peso" (keydown.enter)="focarProximoCampo('amountQTD')">
+                        </fieldset>
+                        @if (isRequired('peso')) {
+                        <small class="ng-error">Peso é obrigatório.</small>
+                        }
+                        @if (groupform.get('peso')?.errors?.['pesoInvalido']) {
+                        <small class="ng-error">{{ groupform.get('peso')?.errors?.['pesoInvalido'] }}</small>
+                        }
+
+                        <fieldset class="ng-fieldset">
+                            <legend>Quantidade</legend>
+                            <input  type="number" class="ng-input" placeholder="QTD"
+                                formControlName="amountQTD" (keydown.enter)="focarProximoCampo('description')">
+                        </fieldset>
+                        @if (isRequired('amountQTD')) {
+                        <small class="ng-error">Quantidade é obrigatório.</small>
+                        }
+
+                        <fieldset class="ng-fieldset">
+                            <legend>Descrição</legend>
+                            <textarea rows="5" class="ng-input textarea" placeholder="Digite a descrição do produto..."
+                                formControlName="description"></textarea>
+                        </fieldset>
+                        @if (isRequired('description')) {
+                        <small class="ng-error">Descrição é obrigatória.</small>
+                        }
+                    </div>
+                </form>
             </section>
-            <app-drop (emiter)="select($event)"></app-drop>
-            
         </div>
-        <button (click)="saveProduct()">Criar</button>
+        <button mat-flat-button class="ng-btn" [disabled]="!isFormPreenchido()" (click)="saveProduct()">Cadastrar Produto</button>
     </div>
 </section>
