--- a/src/app/features/pages/admin/produtos/create-product/create-product.component.scss
+++ b/src/app/features/pages/admin/produtos/create-product/create-product.component.scss
@@ -1,40 +1,40 @@
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
     position: absolute;
-    z-index: 9999;
+    z-index: 1000;
     background-color: rgba(0, 0, 0, 0.6);
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: auto;
 
     .container-int {
         display: flex;
         flex-direction: column;
+        align-items: center;
         width: 100%;
-        background-color: #FFF;
-        height: 100dvh;
+        height: auto;
+        background-color: #fff;
+        padding: 0 20px;
+        gap: 20px;
 
         .container-header {
-            flex-direction: column;
             display: flex;
-            padding: 5px 2px;
+            width: 100%;
+            justify-content: flex-end;
             align-items: center;
+            background-color: #fff;
+            position: fixed;
+            padding: 5px 2px;
             border-bottom: 2px solid #e6e6e6;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06); // sombra bem leve
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 
-            .btn {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
+            div {
+                width: 100%;
             }
 
             h1 {
                 text-align: center;
-                margin-right: 25px;
                 font-weight: 700;
                 font-size: 1.5rem;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -45,64 +45,133 @@
 
         .container-infor-produto {
             display: flex;
-                        flex-direction: column;
-
-            flex: 1;
-            overflow-y: auto;
-            background-color: #FFF;
-            scrollbar-width: thin;
-            scrollbar-color: #0d1d3f;
+            flex-direction: column;
+            width: 100%;
+            height: auto;
+            gap: 20px;
+            margin-top: 70px;
 
             section {
-                padding: 10px;
                 display: flex;
                 flex-direction: column;
 
                 .th {
                     margin: 10px 0;
                     width: 100%;
-                    height: 150px;
-                    background-color: rgb(240, 237, 237);
+                }
+
+                form {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    width: 100%;
+                    gap: 20px 0;
+
+                    .form-step .ng-fieldset {
+                        width: 100%;
+                        padding: 2px;
+                        border-radius: 5px;
+                        margin-top: 15px;
+                        border-color: #bbb;
+
+                        legend {
+                            font-size: 12px;
+                            font-weight: 500;
+                            color: #555;
+                            padding: 0 4px;
+                        }
+
+                        .ng-input {
+                            background-color: transparent;
+                            outline: none;
+                            border: 0;
+                            width: 100%;
+                            height: 30px;
+                            font-size: 16px;
+                            color: #333;
+                        }
+
+                        .ng-input::placeholder {
+                            color: #999;
+                            font-size: 14px;
+                            padding-left: 10px;
+                        }
+
+                        .textarea {
+                            height: auto;
+                        }
+
+
+
+                    }
+
+                    .ng-select{
+                        display: flex;
+                        flex-direction: column;
+                        font-size: 12px;
+                        margin-top: 10px;
+                        gap: 5px 0;
+                        color: #555;
+
+                        select {
+                            padding: 5px;
+                            border-radius: 4px;
+                        }
+                    }
+
+                    .ng-listForm {
+                        display: flex;
+                        justify-content: space-between;
+                        gap: 0 15px;
+
+                        div {
+                            flex: 1;
+                        }
+                    }
+
+                    .ng-error {
+                        width: 100%;
+                        font-size: 12px;
+                        color: #FF8401;
+                        padding: 2px 5px;
+                    }
                 }
             }
 
         }
 
-        .btn-compras {
-            background-color: #FFF;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
+        .ng-btn {
             width: 100%;
-            height: 150px;
-            padding: 10px 36px;
-            border-top: 2px solid #e6e6e6;
-
-            .valor {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                width: 100%;
-                text-align: center;
-                padding: 5px 0;
-                border-bottom: 1px solid #e6e6e6;
-            }
-
-
-            button {
-                height: 30px;
-                width: 200px;
-                border: 0;
-                border-radius: 5px;
-                background-color: rgb(105, 105, 243);
-                color: #f2f2f2;
-
-            }
+            height: 45px;
+            border-radius: 5px;
+            border: 1px solid #c8c8c8;
+            cursor: pointer;
+            font-family: var(--font-family);
+            font-size: 14px;
+            font-weight: 500;
+            background: var(--background-color-container);
+            color: #ddd;
+            margin-bottom: 60px;
         }
+
+        .ng-btn:hover {
+            background-color: #6d4386;
+        }
+
+        .ng-btn:active {
+            transform: scale(0.97);
+
+        }
+
+        .ng-btn:disabled {
+            color: #888;
+        }
+
     }
+
+
 }
+
 
 
 
@@ -113,7 +182,7 @@
         align-items: center;
         justify-content: center;
         position: absolute;
-        z-index: 9999;
+        z-index: 1000;
         background-color: rgba(0, 0, 0, 0.6);
         top: 0;
         left: 0;
@@ -124,26 +193,35 @@
             display: flex;
             flex-direction: column;
             width: 680px;
-            background-color: #FFF;
+            background-color: #F2F2F2;
+            border-radius: 10px;
             height: auto;
+            padding: 0 30px;
+
+            
+        .container-header {
+            position: relative;
+            box-shadow: none;
+            border: none;
+        }
 
             .container-infor-produto {
                 display: flex;
+                flex-direction: row;
                 justify-content: space-around;
-                background-color: #FFF;
+                gap: 0 50px;
+                margin-top: 0;
 
                 section {
-                    padding: 10px;
                     display: flex;
                     flex-direction: column;
-
-                    .th {
-                        display: flex;
-                        flex-direction: column;
-                        background-color: rgb(240, 237, 237);
-                    }
+                    flex: 1;
                 }
 
+            }
+
+            .ng-btn {
+                margin-bottom: 20px;
             }
         }
     }
