--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,8 @@ body {
   font-size: 18px;
 }
 
-body, app-root {
+body,
+app-root {
   padding-bottom: 60px;
   margin: 0;
 }
@@ -63,4 +64,16 @@ select {
       button-color: white,
       supporting-text-color: white,
     ));
+}
+
+.snackbar-success,
+.snackbar-error,
+.snackbar-info,
+.snackbar-multiline {
+  z-index: 9999 !important;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+::ng-deep .cdk-overlay-container {
+  z-index: 9999 !important;
 }
