Tela de cadastro de produtos v05

--- a/src/app/features/pages/admin/produtos/imageDropCarrossel/image-drop-carrossel.component.scss
+++ b/src/app/features/pages/admin/produtos/imageDropCarrossel/image-drop-carrossel.component.scss
@@ -167,7 +167,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
+    background-color: #F2F2F2;
     cursor: pointer;
   }
 
