--- a/src/app/features/pages/admin/produtos/create-product/create-product.component.scss
+++ b/src/app/features/pages/admin/produtos/create-product/create-product.component.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     overflow: auto;
 
     .container-int {
@@ -105,7 +105,7 @@
 
                     }
 
-                    .ng-select{
+                    .ng-select {
                         display: flex;
                         flex-direction: column;
                         font-size: 12px;
@@ -187,23 +187,24 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100dvh;
 
         .container-int {
             display: flex;
             flex-direction: column;
             width: 680px;
-            background-color: #F2F2F2;
+            background-color: #fff;
             border-radius: 10px;
             height: auto;
             padding: 0 30px;
 
-            
-        .container-header {
-            position: relative;
-            box-shadow: none;
-            border: none;
-        }
+
+            .container-header {
+                position: relative;
+                box-shadow: none;
+                border: none;
+                border-bottom: 2px solid #e6e6e6;
+            }
 
             .container-infor-produto {
                 display: flex;
