--- a/src/app/features/pages/admin/produtos/create-product/create-product.component.scss
+++ b/src/app/features/pages/admin/produtos/create-product/create-product.component.scss
@@ -249,12 +249,10 @@
         object-fit: contain;
     }
 }
-.mdc-list-item{
-            background-color: #432059;
-            padding: 5px;
-    color: #e6e6e6;
-}
-.mdc-list-item:hover{
-            background-color: #6d4386;
+// .mdc-list-item{
+//             background: #cba1e6;
+// }
+// .mdc-list-item:hover{
+//             background-color: #6d4386;
 
-}
+// }
