--- a/src/app/features/pages/admin/produtos/create-product/create-product.component.scss
+++ b/src/app/features/pages/admin/produtos/create-product/create-product.component.scss
@@ -1,5 +1,5 @@
 .container {
-    position: fixed;
+    position: absolute;
     z-index: 1000;
     background-color: rgba(0, 0, 0, 0.6);
     top: 0;
