--- a/src/app/shared/component/mobile-navbar/mobile-navbar.component.html
+++ b/src/app/shared/component/mobile-navbar/mobile-navbar.component.html
@@ -1,28 +1,36 @@
 @if (isVisible) {
-  <nav class="mobile-tab-bar" [ngClass]="[isAdmin ? 'ng-isAdmin' : '']">
-    <button (click)="navegar('/')" [class.active]="router.url === '/home'">
-      <mat-icon>home</mat-icon>
-      <span>Home</span>
-    </button>
+<nav class="mobile-tab-bar" [ngClass]="[isAdmin ? 'ng-isAdmin' : '']">
+  <button (click)="navegar('/')" [class.active]="router.url === '/home'">
+    <mat-icon>home</mat-icon>
+    <span>Home</span>
+  </button>
 
-    <button (click)="navegar('/')" [class.active]="router.url === '/compras'">
-      <mat-icon>shopping_cart</mat-icon>
-      <span>Compras</span>
-    </button>
+  <button (click)="navegar('/')" [class.active]="router.url === '/compras'">
+    <mat-icon>shopping_cart</mat-icon>
+    <span>Compras</span>
+  </button>
 
-    <button (click)="navegar('/')" [class.active]="router.url === '/lojas'">
-      <mat-icon>store</mat-icon>
-      <span>Lojas</span>
-    </button>
+  <button (click)="navegar('/')" [class.active]="router.url === '/lojas'">
+    <mat-icon>store</mat-icon>
+    <span>Lojas</span>
+  </button>
 
-    <button (click)="navegar('/')" [class.active]="router.url === '/notificacoes'">
-      <mat-icon>notifications</mat-icon>
-      <span>Notificações</span>
-    </button>
+  <button (click)="navegar('/')" [class.active]="router.url === '/notificacoes'">
+    <mat-icon>notifications</mat-icon>
+    <span>Notificações</span>
+  </button>
 
-    <button (click)="navegar('/my-account')" [class.active]="router.url === '/my-account'">
-      <mat-icon>menu</mat-icon>
-      <span>Menu</span>
-    </button>
-  </nav>
+  @if (usuario.avatar && usuario.nome) {
+  <div class="avatar" (click)="navegar('/my-account')" [class.active]="router.url === '/my-account'">
+    <img [src]="usuario.avatar" width="32" height="32" />
+  </div>
+  }@else {
+  <ng-template>
+    <mat-icon class="ng-avatar-icon" (click)="navegar('/my-account')" [class.active]="router.url === '/my-account'">
+      person
+    </mat-icon>
+  </ng-template>
+  }
+
+</nav>
 }
