--- a/src/app/features/pages/admin/homeAdmin/home.component.scss
+++ b/src/app/features/pages/admin/homeAdmin/home.component.scss
@@ -1,5 +1,6 @@
 .ng-body {
     display: flex;
+    flex-direction: column;
 
     aside {
         box-sizing: border-box;
@@ -7,7 +8,6 @@
         //    background-color: #0d1d3f;
 
         .ng-logo {
-            width: 100%;
             height: 54px;
             padding-right: 5px;
             background-size: contain;
@@ -29,8 +29,11 @@
     }
 
     .main {
-        flex: 1;
+        display: flex;
+        flex-direction: column;
         background-color: #fff;
+        scrollbar-color: #505861 #fff;
+        height: 100vh;
 
         .header {
             width: 100%;
@@ -38,19 +41,15 @@
 
         .ng-container {
             display: flex;
+            margin-top: 85px;
 
             .ng-main {
-                padding: 0 11px;
-
-                flex: 1;
                 width: 100%;
-                height: calc(100vh - 82px);
                 overflow-y: auto;
-                scrollbar-width: thin;
-                scrollbar-color: #505861 #fff;
 
                 .area-main {
                     width: 100%;
+                    padding-bottom: 60px;
 
                 }
 
@@ -72,7 +71,5 @@
         display: none;
     }
 
-    .ng-main {
-        position: fixed;
-    }
+
 }
