--- a/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
+++ b/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
@@ -1,9 +1,10 @@
 .app-content {
     width: 100%;
-    padding: 11px;
+    padding-bottom: 111px;
     display: flex;
     flex-direction: column;
     gap: 30px;
+
 
 
     .ng-header-content {
