--- a/src/app/shared/component/cobranca/cobranca.component.scss
+++ b/src/app/shared/component/cobranca/cobranca.component.scss
@@ -1,9 +1,11 @@
 .update{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 30px;
+    gap: 0 30px;
     background-color: rgb(248, 186, 186);
-    padding: 5px 156px;
     box-sizing: border-box;
     span{
         font-size: 14px;
