--- a/src/app/shared/component/header/header.component.scss
+++ b/src/app/shared/component/header/header.component.scss
@@ -1,219 +1,244 @@
 :host {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
 }
 
 .demo-section .demo-section {
-  margin-top: 16px;
+    margin-top: 16px;
 }
-.ng-header {
+
+.main {
+    position: fixed;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    height: 55px;
-    align-items: center;
-    padding: 0 20px;
-    background-color: #0d1d3f;
-    color: #DDD;
+    z-index: 1000;
     top: 0;
-    border-bottom: 1px solid #ccc;
-    box-shadow: 1px;
+    left: 0;
 
-
-
-    .ng-logo {
-        width: 160px;
-        height: 40px;
-        background-size: contain;
-        background-image: url("/logo.png");
-        padding: 18px 2px;
-        background-repeat: no-repeat;
-        margin-left: 10px;
+    .ng-header {
+        width: 100%;
         display: flex;
+        justify-content: space-between;
+        height: 45px;
         align-items: center;
-        justify-content: end;
-        cursor: pointer;
+        padding: 0 20px;
+        background-color: #0d1d3f;
+        color: #DDD;
+        box-shadow: 1px;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.6);
 
-        .icon {
-            text-align: center;
-            cursor: pointer;
-
-        }
-    }
-
-    .ng-form form {
-        display: flex;
-
-        .search {
-            width: 400px;
+        .menu-logo {
             display: flex;
             align-items: center;
-            background-color: #ffffff;
-            padding: 0 10px;
-            border-radius: 5px;
-            border: 1px solid #cac9c9;
+        }
 
-            .ng-input {
-                flex: 1;
-                padding: 5px;
-                outline: none;
-                border: none;
+        .menu-logo-mobile {
+            width: 100%;
+            justify-content: space-between;
+            flex-direction: row-reverse;
 
-                
-            }
+        }
 
-            mat-icon {
-                padding: 0 2px;
+
+        .ng-logo {
+            width: 130px;
+            height: 25px;
+            background-size: contain;
+            background-image: url("/logo.png");
+            padding: 18px 2px;
+            background-repeat: no-repeat;
+            display: flex;
+            align-items: center;
+            justify-content: end;
+            cursor: pointer;
+
+            .icon {
+                text-align: center;
                 cursor: pointer;
-                color: #000;
+
             }
         }
 
-    }
+        .ng-form form {
+            display: flex;
 
-    .ng-perfil {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        z-index: 1000;
+            .search {
+                width: 400px;
+                display: flex;
+                align-items: center;
+                background-color: #ffffff;
+                padding: 0 10px;
+                border-radius: 5px;
+                border: 1px solid #cac9c9;
 
-        .ng-perfil-name {
-            font-size: 12px;
+                .ng-input {
+                    flex: 1;
+                    padding: 5px;
+                    outline: none;
+                    border: none;
+
+
+                }
+
+                mat-icon {
+                    padding: 0 2px;
+                    cursor: pointer;
+                    color: #000;
+                }
+            }
+
         }
 
-        .avatar {
-            width: 35px;
-            height: 35px;
-            border-radius: 15px;
+        .ng-perfil {
             display: flex;
             align-items: center;
-            justify-content: center;
-            cursor: pointer;
+            gap: 10px;
+            z-index: 1000;
 
-            img {
+            .ng-perfil-name {
+                font-size: 12px;
+            }
+
+            .avatar {
                 width: 35px;
                 height: 35px;
+                border-radius: 15px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+
+                img {
+                    width: 35px;
+                    height: 35px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+            }
+
+            .ng-avatar-icon {
+                width: 35px;
+                height: 35px;
+                background-color: #ccc;
                 border-radius: 50%;
-                object-fit: cover;
+                line-height: 30px;
+                text-align: center;
             }
         }
 
-        .ng-avatar-icon {
-            width: 35px;
-            height: 35px;
-            background-color: #ccc;
-            border-radius: 50%;
-            line-height: 30px;
-            text-align: center;
+        .ng-perfil02 {
+            cursor: pointer;
         }
-    }
 
-    .ng-perfil02 {
-        cursor: pointer;
-    }
-
-    form input {
-        border-radius: 5px;
-        height: 30px;
-    }
-
-    .search {
-        .icone:active {
-            transform: scale(0.92);
+        form input {
+            border-radius: 5px;
+            height: 30px;
         }
-    }
 
-    .ng-checkout {
-        display: flex;
-        align-items: center;
-        gap: 0 15px;
-        height: 100%;
-        cursor: pointer;
-        .carrinho{
+        .search {
+            .icone:active {
+                transform: scale(0.92);
+            }
+        }
+
+        .ng-checkout {
             display: flex;
             align-items: center;
-            justify-content: center;
+            gap: 0 15px;
+            height: 100%;
+            cursor: pointer;
+
+            .carrinho {
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 position: relative;
                 width: 30%;
                 height: 100%;
-                .toggle-ico{
+
+                .toggle-ico {
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     background-color: red;
                     position: absolute;
                     top: 0;
-                    right:0;
-                    width:15px ;
-                    height:15px ;
+                    right: 0;
+                    width: 15px;
+                    height: 15px;
                     border-radius: 100%;
                     font-size: 10px;
                     font-weight: 600;
                     margin-top: 8px;
 
                 }
-                mat-icon{
+
+                mat-icon {
                     font-size: 24px;
                 }
             }
 
-        .mat-icon {
-            color: #fff;
-        }
+            .mat-icon {
+                color: #fff;
+            }
 
-        .ng-btn-empresas {
-            display: flex;
-            width: 160px;
-            font-size: 14px;
-            justify-content: center;
-            color: #ddd;
-            cursor: pointer;
-        }
+            .ng-btn-empresas {
+                display: flex;
+                width: 160px;
+                font-size: 14px;
+                justify-content: center;
+                color: #ddd;
+                cursor: pointer;
+            }
 
-        .ng-btn-empresas:hover {
-            background-color: #192c57;
-        }
+            .ng-btn-empresas:hover {
+                background-color: #192c57;
+            }
 
-        button {
-            margin-left: 10px;
-            background-color: #FF9933;
-            padding: 5px 20px;
-            border: 0;
-            border-radius: 5px;
-            cursor: pointer;
+            button {
+                margin-left: 10px;
+                background-color: #FF9933;
+                padding: 5px 20px;
+                border: 0;
+                border-radius: 5px;
+                cursor: pointer;
 
-        }
+            }
 
-        button:active {
-            transform: scale(0.92);
-        }
+            button:active {
+                transform: scale(0.92);
+            }
 
-        .btn1 {
-            background-color: #FF9933;
-        }
+            .btn1 {
+                background-color: #FF9933;
+            }
 
-        .btn2 {
-            background-color: #f7f5f4;
-        }
+            .btn2 {
+                background-color: #f7f5f4;
+            }
 
-        .btn1:hover {
-            background-color: #928c45;
-            color: #FFF;
-        }
+            .btn1:hover {
+                background-color: #928c45;
+                color: #FFF;
+            }
 
-        .btn2:hover {
-            background-color: #b5f1ff;
-            color: #0f0f0f;
+            .btn2:hover {
+                background-color: #b5f1ff;
+                color: #0f0f0f;
+            }
         }
     }
+
+
+    .admin {
+        background-color: #FFF;
+        color: #333;
+        border-bottom: 1px solid #ccc;
+    }
+
 }
 
-.admin {
-    background-color: #FFF;
-    color: #333;
-}
 
 .menu {
     right: 0;
@@ -300,3 +325,234 @@
 }
 
 
+
+// -----------------------------------------------------------------------------------------------------------//
+@media screen and (min-width:769px) {
+    .main {
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
+        top: 0;
+        left: 0;
+
+        .ng-header {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            height: 55px;
+            align-items: center;
+            padding: 0 20px;
+            background-color: #0d1d3f;
+            color: #DDD;
+            box-shadow: 1px;
+            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.6);
+
+            .menu-logo {
+                display: flex;
+                align-items: center;
+                gap: 0 20px;
+            }
+
+
+            .ng-logo {
+                width: 160px;
+                height: 40px;
+                background-size: contain;
+                background-image: url("/logo.png");
+                padding: 18px 2px;
+                background-repeat: no-repeat;
+                margin-left: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: end;
+                cursor: pointer;
+
+                .icon {
+                    text-align: center;
+                    cursor: pointer;
+
+                }
+            }
+
+            .ng-form form {
+                display: flex;
+
+                .search {
+                    width: 400px;
+                    display: flex;
+                    align-items: center;
+                    background-color: #ffffff;
+                    padding: 0 10px;
+                    border-radius: 5px;
+                    border: 1px solid #cac9c9;
+
+                    .ng-input {
+                        flex: 1;
+                        padding: 5px;
+                        outline: none;
+                        border: none;
+
+
+                    }
+
+                    mat-icon {
+                        padding: 0 2px;
+                        cursor: pointer;
+                        color: #000;
+                    }
+                }
+
+            }
+
+            .ng-perfil {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                z-index: 1000;
+
+                .ng-perfil-name {
+                    font-size: 12px;
+                }
+
+                .avatar {
+                    width: 35px;
+                    height: 35px;
+                    border-radius: 15px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    cursor: pointer;
+
+                    img {
+                        width: 35px;
+                        height: 35px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                }
+
+                .ng-avatar-icon {
+                    width: 35px;
+                    height: 35px;
+                    background-color: #ccc;
+                    border-radius: 50%;
+                    line-height: 30px;
+                    text-align: center;
+                }
+            }
+
+            .ng-perfil02 {
+                cursor: pointer;
+            }
+
+            form input {
+                border-radius: 5px;
+                height: 30px;
+            }
+
+            .search {
+                .icone:active {
+                    transform: scale(0.92);
+                }
+            }
+
+            .ng-checkout {
+                display: flex;
+                align-items: center;
+                gap: 0 15px;
+                height: 100%;
+                cursor: pointer;
+
+                .carrinho {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    position: relative;
+                    width: 30%;
+                    height: 100%;
+
+                    .toggle-ico {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        background-color: red;
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        width: 15px;
+                        height: 15px;
+                        border-radius: 100%;
+                        font-size: 10px;
+                        font-weight: 600;
+                        margin-top: 8px;
+
+                    }
+
+                    mat-icon {
+                        font-size: 24px;
+                    }
+                }
+
+                .mat-icon {
+                    color: #fff;
+                }
+
+                .ng-btn-empresas {
+                    display: flex;
+                    width: 160px;
+                    font-size: 14px;
+                    justify-content: center;
+                    color: #ddd;
+                    cursor: pointer;
+                }
+
+                .ng-btn-empresas:hover {
+                    background-color: #192c57;
+                }
+
+                button {
+                    margin-left: 10px;
+                    background-color: #FF9933;
+                    padding: 5px 20px;
+                    border: 0;
+                    border-radius: 5px;
+                    cursor: pointer;
+
+                }
+
+                button:active {
+                    transform: scale(0.92);
+                }
+
+                .btn1 {
+                    background-color: #FF9933;
+                }
+
+                .btn2 {
+                    background-color: #f7f5f4;
+                }
+
+                .btn1:hover {
+                    background-color: #928c45;
+                    color: #FFF;
+                }
+
+                .btn2:hover {
+                    background-color: #b5f1ff;
+                    color: #0f0f0f;
+                }
+            }
+        }
+
+
+
+        .admin {
+            background-color: #FFF;
+            color: #333;
+            border-bottom: 1px solid #ccc;
+        }
+
+    }
+
+
+}
