--- a/src/app/shared/component/mobile-navbar/mobile-navbar.component.scss
+++ b/src/app/shared/component/mobile-navbar/mobile-navbar.component.scss
@@ -5,8 +5,9 @@
   background-color: #0d1d3f;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   border-top: 1px solid #ddd;
-  z-index: 1000;
+  z-index: 1001;
 
   button {
     background: none;
@@ -33,6 +34,37 @@
     }
   }
 
+  .avatar {
+    width: 35px;
+    height: 35px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-right: 20px;
+
+    img {
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 1px solid #888;
+    }
+  }
+
+  .ng-avatar-icon {
+    width: 35px;
+    height: 35px;
+    background-color: #ccc;
+    border-radius: 50%;
+    line-height: 30px;
+    text-align: center;
+    border: 1px solid #888;
+    margin-right: 20px;
+  }
+
+
 }
 
 .ng-isAdmin {
@@ -41,7 +73,9 @@
 
 
   button {
-    mat-icon, span {
+
+    mat-icon,
+    span {
       color: #555;
     }
 
